--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -84,7 +84,7 @@ ol.linenums li {
 }
 
 @media (min-width: 768px) {
-  body, #app, .bg, .home, .Footer, .Guide, .mint-header, .container {
+  body, #app, .bg, .home, .Footer, .Guide, .mint-header, .container,.gradual-blue {
     width: 414px !important;
     margin: 0 auto;
   }
