--- a/src/assets/less/scoped.less
+++ b/src/assets/less/scoped.less
@@ -28,3 +28,26 @@
     }
   }
 }
+.Xlsx{
+  .xlsx-button{
+    padding:0 ;
+    height: 30px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .mint-cell{
+    .mint-cell-wrapper{
+      border-bottom: 1px solid #d9d9d9;
+      background-image:none;
+    }
+    &:last-child{
+      .mint-cell-wrapper{
+        border-bottom:none;
+      }
+    }
+    &:last-child{}
+    background-image: none;
+  }
+}
